--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2020 Pedro Albuquerque Santos.
+  ~ Copyright (c) 2021 Pedro Albuquerque Santos.
   ~
   ~ This file is part of YanuX Scavenger.
   ~
@@ -138,6 +138,15 @@
     <string name="preferences_default_beacon_advertiser_parameters_uuid">113069EC-6E64-4BD3-6810-DE01B36E8A3E</string>
     <string name="preferences_title_beacon_advertiser_parameters_major">Beacon Advertiser Major</string>
     <string name="preferences_title_beacon_advertiser_parameters_minor">Beacon Advertiser Minor</string>
+    <string name="preferences_title_beacon_advertiser_power_level">Beacon Advertiser Power Level</string>
+    <string name="preferences_beacon_advertiser_power_level_label_high">High</string>
+    <string name="preferences_beacon_advertiser_power_level_label_medium">Medium</string>
+    <string name="preferences_beacon_advertiser_power_level_label_low">Low</string>
+    <string name="preferences_beacon_advertiser_power_level_label_ultra_low">Ultra Low</string>
+    <string name="preferences_beacon_advertiser_power_level_value_high">HIGH</string>
+    <string name="preferences_beacon_advertiser_power_level_value_medium">MEDIUM</string>
+    <string name="preferences_beacon_advertiser_power_level_value_low">LOW</string>
+    <string name="preferences_beacon_advertiser_power_level_value_ultra_low">ULTRA_LOW</string>
     <string name="preferences_title_beacons_refresh_interval">Beacons Refresh Interval</string>
     <string name="preferences_title_beacons_inactivity_timer">Beacons Inactivity Timer</string>
 
